# project1

./: package.yaml  project1.cabal  stack.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Lib.hs  Render.hs  Server.hs  Shapes.hs
