cabal-version: 2.2

name:           project1
version:        0.1.0.0

library
  exposed-modules:
      Render
      Server
      Shapes
  other-modules:
      Paths_project1
  autogen-modules:
      Paths_project1
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      JuicyPixels
    , base >=4.7 && <5
    , blaze-html
    , bytestring
    , scotty
  default-language: Haskell2010

executable project1-exe
  main-is: Main.hs
  other-modules:
      Paths_project1
  autogen-modules:
      Paths_project1
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      JuicyPixels
    , base >=4.7 && <5
    , blaze-html
    , bytestring
    , project1
    , scotty
  default-language: Haskell2010
